fix thumbnail alignment issues. add more user profile info to individual user page views

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,9 +2,14 @@ ul {
   list-style-type: none;
 }
 
-.initial-imgs {
-  height: 50px;
-  width: auto;
+.profile-img {
+  display: block;
+  margin: auto;
+  height: 25em;
+}
+
+.well{
+  text-align: center;
 }
 
 #login, #userReposHeader, #userResultsHeader {
